[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/pause_menu/home/home.gd" type="Script" id=1]
[ext_resource path="res://src/ui/menu.theme" type="Theme" id=2]
[ext_resource path="res://raw_assets/sfx/ui/switch_004.ogg" type="AudioStream" id=3]

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -300.0
margin_right = 85.0
margin_bottom = 300.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 35
alignment = 1

[node name="TitleLabel" type="Label" parent="Content"]
margin_top = 176.0
margin_right = 170.0
margin_bottom = 227.0
theme_type_variation = "Header2"
text = "Paused"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="Content"]
margin_top = 262.0
margin_right = 170.0
margin_bottom = 423.0
custom_constants/separation = 7

[node name="BtnResume" type="Button" parent="Content/Buttons"]
margin_right = 170.0
margin_bottom = 35.0
text = "Resume"

[node name="BtnControls" type="Button" parent="Content/Buttons"]
margin_top = 42.0
margin_right = 170.0
margin_bottom = 77.0
text = "Controls"

[node name="BtnSettings" type="Button" parent="Content/Buttons"]
margin_top = 84.0
margin_right = 170.0
margin_bottom = 119.0
text = "Settings"

[node name="BtnQuit" type="Button" parent="Content/Buttons"]
margin_top = 126.0
margin_right = 170.0
margin_bottom = 161.0
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
mix_target = 2
bus = "UISounds"

[connection signal="pressed" from="Content/Buttons/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Content/Buttons/BtnQuit" to="." method="_on_btn_quit_pressed"]
